# machine-learning

./: .gitignore  CMakeLists.txt  ReadMe.md  ReadMe.txt  main.cpp
.run/: NumberLearnerExe.run.xml
src/: ReadFile.cpp  ReadFile.h  main.cpp  second.cpp  second.h
